--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "composer-plugin",
     "require": {
         "php": ">=5.6",
+        "composer-plugin-api": "^1.0",
         "symfony/finder": "^3.1",
         "twig/twig": "^1.24"
     },
@@ -19,10 +20,7 @@
             "email": "athompson@inviqa.com"
         }
     ],
-    "scripts": {
-        "post-create-project-cmd": [
-            "Inviqa\\Seeder\\ScriptHandler::postCreateProject",
-            "@composer update"
-        ]
+    "extra": {
+        "class": "Inviqa\\Seeder\\SeederPlugin"
     }
 }
